nav and footer css added

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13540,6 +13540,11 @@ Slider Styles
   }
 }
 
+.my-width {
+  width: 60px !important;
+  height: 60px !important;
+}
+
 @media only screen and (min-width: 768px) and (max-width: 991px) {
   .slide.slider-style-3 .inner h1.title {
     font-size: 60px;
