--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11086,7 +11086,7 @@ Footer Styles
 }
 
 .footer-default .footer-left .inner::after {
-  content: url(../images/logo/big-logo.png);
+  /* content: url(../images/logo/big-logo.png); */
   position: absolute;
   right: 0;
   top: 50%;
@@ -11319,14 +11319,14 @@ Footer Style Two
 
 .portfolio {
   position: relative;
-  min-height: 500px;
+  min-height: 450px;
   width: 100%;
   padding-top: 35%;
 }
 
 @media only screen and (min-width: 1200px) and (max-width: 1599px) {
   .portfolio {
-    min-height: 325px;
+    min-height: 355px;
   }
 }
 
