--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11411,7 +11411,7 @@ Footer Style Two
 }
 
 .portfolio .thumbnail.image-2 {
-  background-image: url(../images/portfolio/portfolio-2.jpg);
+  background-image: url(../../coach.png);
 }
 
 .portfolio .thumbnail.image-3 {
@@ -11478,7 +11478,7 @@ Footer Style Two
 }
 
 .portfolio .bg-blr-image.image-2 {
-  background-image: url(../images/portfolio/portfolio-2.jpg);
+  background-image: url(../../coach.png);
 }
 
 .portfolio .bg-blr-image.image-3 {
@@ -11692,7 +11692,7 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-2 {
-  background-image: url(../images/portfolio/portfolio-static-02.jpg);
+  background-image: url(../../coach.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-3 {
@@ -11770,7 +11770,7 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-2 {
-  background-image: url(../images/portfolio/portfolio-static-02.jpg);
+  background-image: url(../../coach.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-3 {
