adding new projects to porfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11423,15 +11423,15 @@ Footer Style Two
 }
 
 .portfolio .thumbnail.image-5 {
-  background-image: url(../images/portfolio/portfolio-5.jpg);
+  background-image: url(../../port.png);
 }
 
 .portfolio .thumbnail.image-6 {
-  background-image: url(../images/portfolio/portfolio-6.jpg);
+  background-image: url(../../startup.png);
 }
 
 .portfolio .thumbnail.image-7 {
-  background-image: url(../images/portfolio/portfolio-7.jpg);
+  background-image: url(../../account.png);
 }
 
 .portfolio .thumbnail.image-8 {
@@ -11490,11 +11490,11 @@ Footer Style Two
 }
 
 .portfolio .bg-blr-image.image-5 {
-  background-image: url(../images/portfolio/portfolio-5.jpg);
+  background-image: url(../../port.png);
 }
 
 .portfolio .bg-blr-image.image-6 {
-  background-image: url(../images/portfolio/portfolio-6.jpg);
+  background-image: url(../../startup.png);
 }
 
 .portfolio .bg-blr-image.image-7 {
@@ -11704,11 +11704,11 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-5 {
-  background-image: url(../images/portfolio/portfolio-static-05.jpg);
+  background-image: url(../../port.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-6 {
-  background-image: url(../images/portfolio/portfolio-static-06.jpg);
+  background-image: url(../../startup.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-7 {
@@ -11782,11 +11782,11 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-5 {
-  background-image: url(../images/portfolio/portfolio-static-05.jpg);
+  background-image: url(../../port.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-6 {
-  background-image: url(../images/portfolio/portfolio-static-06.jpg);
+  background-image: url(../../startup.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-7 {
