optimizing portfolio images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11415,11 +11415,11 @@ Footer Style Two
 }
 
 .portfolio .thumbnail.image-3 {
-  background-image: url(../images/portfolio/portfolio-3.jpg);
+  background-image: url(../../pwa.png);
 }
 
 .portfolio .thumbnail.image-4 {
-  background-image: url(../images/portfolio/portfolio-4.jpg);
+  background-image: url(../../seller.png);
 }
 
 .portfolio .thumbnail.image-5 {
@@ -11435,11 +11435,11 @@ Footer Style Two
 }
 
 .portfolio .thumbnail.image-8 {
-  background-image: url(../images/portfolio/portfolio-8.jpg);
+  background-image: url(../../shirts.png);
 }
 
 .portfolio .thumbnail.image-9 {
-  background-image: url(../images/portfolio/portfolio-9.jpg);
+  background-image: url(../../body.png);
 }
 
 .portfolio .thumbnail::after {
@@ -11482,11 +11482,11 @@ Footer Style Two
 }
 
 .portfolio .bg-blr-image.image-3 {
-  background-image: url(../images/portfolio/portfolio-3.jpg);
+  background-image: url(../../pwa.png);
 }
 
 .portfolio .bg-blr-image.image-4 {
-  background-image: url(../images/portfolio/portfolio-4.jpg);
+  background-image: url(../../seller.png);
 }
 
 .portfolio .bg-blr-image.image-5 {
@@ -11498,15 +11498,15 @@ Footer Style Two
 }
 
 .portfolio .bg-blr-image.image-7 {
-  background-image: url(../images/portfolio/portfolio-7.jpg);
+  background-image: url(../../account.png);
 }
 
 .portfolio .bg-blr-image.image-8 {
-  background-image: url(../images/portfolio/portfolio-8.jpg);
+  background-image: url(../../shirts.png);
 }
 
 .portfolio .bg-blr-image.image-9 {
-  background-image: url(../images/portfolio/portfolio-9.jpg);
+  background-image: url(../../body.png);
 }
 
 .portfolio .content {
@@ -11696,11 +11696,11 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-3 {
-  background-image: url(../images/portfolio/portfolio-static-03.jpg);
+  background-image: url(../../pwa.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-4 {
-  background-image: url(../images/portfolio/portfolio-static-04.jpg);
+  background-image: url(../../seller.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-5 {
@@ -11712,15 +11712,15 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-7 {
-  background-image: url(../images/portfolio/portfolio-static-07.jpg);
+  background-image: url(../../account.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-8 {
-  background-image: url(../images/portfolio/portfolio-static-08.jpg);
+  background-image: url(../../shirts.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-9 {
-  background-image: url(../images/portfolio/portfolio-static-09.jpg);
+  background-image: url(../../body.png);
 }
 
 .portfolio-tilthover .portfolio .thumbnail.image-10 {
@@ -11774,11 +11774,11 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-3 {
-  background-image: url(../images/portfolio/portfolio-static-03.jpg);
+  background-image: url(../../pwa.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-4 {
-  background-image: url(../images/portfolio/portfolio-static-04.jpg);
+  background-image: url(../../seller.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-5 {
@@ -11790,15 +11790,15 @@ Footer Style Two
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-7 {
-  background-image: url(../images/portfolio/portfolio-static-07.jpg);
+  background-image: url(../../account.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-8 {
-  background-image: url(../images/portfolio/portfolio-static-08.jpg);
+  background-image: url(../../shirts.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-9 {
-  background-image: url(../images/portfolio/portfolio-static-09.jpg);
+  background-image: url(../../body.png);
 }
 
 .portfolio-tilthover .portfolio .bg-blr-image.image-10 {
